--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ navigation:                # accepts {file, title, url, icon, sidebaricon}
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "alejandrohdezles@gmail.com"}
   - {title: Github, icon: github, url: "https://github.com/alejandrohdez00"}
-  - {title: Subscribe, icon: rss, url: "/feed.xml"}
+  - {title: LinkedIn, icon: linkedin, url: "https://www.linkedin.com/in/alejandro-hernandez-artiles/"}
 
 comments:
 #  disqus_shortname: ""    # see https://disqus.com/
