--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {file: "README.md"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
-  - {title: Mail, icon: envelope, url: "alejandrohdezles@gmail.com"}
+  - {title: Mail, icon: envelope, url: "mailto:alejandrohdezles@gmail.com"}
   - {title: Github, icon: github, url: "https://github.com/alejandrohdez00"}
   - {title: LinkedIn, icon: linkedin, url: "https://www.linkedin.com/in/alejandro-hernandez-artiles/"}
 
